deployments/kubernetes/services.yaml
# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jewelry-processor-web-service
  namespace: jewelry-processor
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: jewelry-processor-web
